Fixing positioning for snaps field, aligning checkbox

--- a/css/loccs.css
+++ b/css/loccs.css
@@ -48,8 +48,8 @@ input {
 
 #snaps {
     position: absolute;
-    top: 600px;
-    left: 43px;
+    top: 970px;
+    left: 32px;
     font-weight: bold;
     font-size: 14px;
     min-width: 300px;
